version 0.2 - ???
 . Added particle system (Pixel and Texture)

version 0.1 - 25-jun-2008:

25-jun-2008:
 . renamed MoveBy:actionWithDuration:delta to MoveBy:actionWithDuration:position
 . added Animation, Animate classes to animates sprites
 . removed box2d and related stuff to box2d
 . added and ported Chipmunk Demo
 . added primitives like drawCircle(), drawPoly(), drawLine(), drawPoint()

24-jun-2008:
 . moved all main.c and other tests files to tests/
 . moved plists, sounds and images to Resources/
 . removed unused images
 . Using only one plist file in Resources
 . cocos2d-port renamed to trunk
 . Imported code from Assembla